added basic html for landing page

--- a/webapp/views/index.jade
+++ b/webapp/views/index.jade
@@ -1,2 +1,19 @@
 h1= title
 p Deving #{title}
+div.search-container
+    div
+        input(type="input", placeholder="When")#date-time
+    div
+        input(type="input", placeholder="Location")#location
+    div
+        select
+            option 1 Guest
+            option 2 Guests
+            option 3 Guests
+            option 4 Guests
+            option 5 Guests
+            option 6 Guests
+            option 7 Guests
+            option 8 Guests
+    div
+        button(type="submit") Search
