--- a/webapp/views/layout.jade
+++ b/webapp/views/layout.jade
@@ -1,6 +1,10 @@
 !!!
 html
   head
-    title Kitchenly
-    link(rel='stylesheet', href='/stylesheets/style.css')
-  body!= body
+    title= title
+    
+    link(rel='stylesheet', href='/bootstrap/css/bootstrap.css')
+    link(rel='stylesheet', href='/bootstrap/css/responsive.css')
+    link(rel='stylesheet', href='/css/kitchenly.css')
+    
+  body.has-bg-photo!= body
