--- a/webapp/public/css/kitchenly.css
+++ b/webapp/public/css/kitchenly.css
@@ -26,7 +26,8 @@ body.has-bg-photo {
   display: block;
   margin: 0px;
   color: #fff;
-  font-size: 18px;
+  font-size: 20px;
+  letter-spacing: 0.8pt;
   background: transparent url('../img/kitchenly-logo.png') no-repeat 0px 8px;
   text-indent: 62px;
   height: 68px;
@@ -36,10 +37,13 @@ body.has-bg-photo {
 
 h1.tag-line {
   color: #fff;
+  font-size: 48px;
 }
 
 h2.description {
   color: #fff;
+  font-size: 24px;
+  font-weight: normal;
 }
 
 .result-box {
