reverting to a previous version of layout.jade

--- a/webapp/views/index.jade
+++ b/webapp/views/index.jade
@@ -3,12 +3,12 @@
 
 header.site-header 
   div.container
-    h1.kitchenly-branding 
-     a(href='/') kitchenly
+    h1.kitchenly-branding.tk-mic-32-new-web 
+     a(href='/') kitchen.ly
 
 div.page-contain.container
-  h1.tag-line Easily host dinners in your own kitchen.
-  h2.description The best way to turn your kitchen into a restaurant and also find great dinners around town.
+  h1.tag-line.tk-proxima-nova Easily host dinners in your own kitchen.
+  h2.description.tk-pt-serif-caption The best way to turn your kitchen into a restaurant and also find great dinners around town.
 
   div#navbar-main.navbar.navbar-inverse    
     div.navbar-inner
@@ -43,5 +43,19 @@ div.page-contain.container
                   a(href="#") 8 Guests
                   
         button.btn.btn-primary.btn-large.pull-left(type="submit") Search for Dinner
+        
+block scripts
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="scripts/vendor/jquery/jquery-1.7.1.min.js"><\/script>')</script>
+
+    <script src="scripts/vendor/ss-social.js"></script>
+    <script src="scripts/vendor/ss-standard.js"></script>
+    
+    <script src="bootstrap/scripts/bootstrap-transition.js"></script>  
+    <script src="bootstrap/scripts/bootstrap-modal.js"></script>
+    <script src="bootstrap/scripts/bootstrap-dropdown.js"></script>
+    <script src="bootstrap/scripts/bootstrap-button.js"></script>
+    <script src="bootstrap/scripts/bootstrap-tooltip.js"></script>
+    <script src="bootstrap/scripts/bootstrap-popover.js"></script>
     
     
