home page styling coming along nicely

--- a/webapp/public/bootstrap/less/variables.less
+++ b/webapp/public/bootstrap/less/variables.less
@@ -20,7 +20,7 @@
 
 // Accent colors
 // -------------------------
-@blue:                  #049cdb;
+@blue:                  #44A1E1;
 @blueDark:              #0064cd;
 @green:                 #46a546;
 @red:                   #9d261d;
@@ -38,7 +38,7 @@
 
 // Links
 // -------------------------
-@linkColor:             #08c;
+@linkColor:             #44A1E1;
 @linkColorHover:        darken(@linkColor, 15%);
 
 
