--- a/webapp/public/bootstrap/less/ss-social.less
+++ b/webapp/public/bootstrap/less/ss-social.less
@@ -11,22 +11,22 @@
 
 @font-face {
   font-family: "SSSocial";
-  src: url('../../fonts/ss-social-circle.eot');
-  src: url('../../fonts/ss-social-circle.eot?#iefix') format('embedded-opentype'),
-       url('../../fonts/ss-social-circle.woff') format('woff'),
-       url('../../fonts/ss-social-circle.ttf') format('truetype'),
-       url('../../fonts/ss-social-circle.svg#SSSocialCircle') format('svg');
+  src: url('/fonts/ss-social-circle.eot');
+  src: url('/fonts/ss-social-circle.eot?#iefix') format('embedded-opentype'),
+       url('/fonts/ss-social-circle.woff') format('woff'),
+       url('/fonts/ss-social-circle.ttf') format('truetype'),
+       url('/fonts/ss-social-circle.svg#SSSocialCircle') format('svg');
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
   font-family: "SSSocial";
-  src: url('../../fonts/ss-social-regular.eot');
-  src: url('../../fonts/ss-social-regular.eot?#iefix') format('embedded-opentype'),
-       url('../../fonts/ss-social-regular.woff') format('woff'),
-       url('../../fonts/ss-social-regular.ttf') format('truetype'),
-       url('../../fonts/ss-social-regular.svg#SSSocialRegular') format('svg');
+  src: url('/fonts/ss-social-regular.eot');
+  src: url('/fonts/ss-social-regular.eot?#iefix') format('embedded-opentype'),
+       url('/fonts/ss-social-regular.woff') format('woff'),
+       url('/fonts/ss-social-regular.ttf') format('truetype'),
+       url('/fonts/ss-social-regular.svg#SSSocialRegular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
