background photo only on homepage now

--- a/webapp/views/layout.jade
+++ b/webapp/views/layout.jade
@@ -13,4 +13,4 @@ html.no-js
       <script type="text/javascript" src="//use.typekit.net/jnr8raz.js"></script>
       <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
     
-  body.has-bg-photo!= body
+  body!= body
