--- a/webapp/public/css/kitchenly.css
+++ b/webapp/public/css/kitchenly.css
@@ -12,9 +12,25 @@ body.has-bg-photo {
 	-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='myBackground.jpg', sizingMethod='scale')";*/
 }
 
+.bg-img {
+  position: absolute;
+   z-index: -1;
+  min-width: 420px;
+  width: 100%;
+  height: 100%;
+  background: url('../img/cooking-woman.jpg')no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  /*filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='.myBackground.jpg', sizingMethod='scale');
+  -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='myBackground.jpg', sizingMethod='scale')";*/
+}
+
 .site-header {
   background: #A02654;
   height: 68px;
+ 
 }
 
 .kitchenly-branding {
@@ -62,7 +78,11 @@ h2.description {
 }
 
 #user-nav {
-  margin-top: 15px;
+  margin-top: 16px;
+}
+
+#user-nav li {
+  margin-left: 9px;
 }
 
 #user-nav li a {
@@ -112,9 +132,13 @@ h4.result-title {
   margin-right: 7px;
 }
 
-#navbar-main {
-  margin-top: 24px;  
+#navbar-main { 
   clear: both;
+}
+
+#navbar-secondary { 
+  clear: both;
+  margin-top: 20px;
 }
 
 #navbar-main .navbar-inner {
@@ -153,7 +177,7 @@ h4.result-title {
   background: #2B2B29;
   margin-left: 0px;
   padding: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 68px;
   
 }
 
@@ -161,4 +185,14 @@ h4.result-title {
   width: 160px;
   text-align: left;
   
+}
+
+a.social-link {
+text-decoration: none;
+font-size: 30px;
+color: #fff;  
+}
+
+a:hover.social-link {
+  color: #44A1E1;
 }
