--- a/webapp/views/index.jade
+++ b/webapp/views/index.jade
@@ -1,6 +1,6 @@
 //h1= title
 //p Deving #{title}
-
+div.bg-img
 header.site-header 
   div.container
     h1.kitchenly-branding.tk-mic-32-new-web.pull-left 
@@ -11,8 +11,6 @@ header.site-header
           a.sign-up-link(href='/') Sign Up
         li.pull-left
           a.sign-in-link(href='/') Login 
-   
-       
 
 div.page-contain.container
   div.homepage-feature.span5
@@ -52,7 +50,10 @@ div.page-contain.container
                   a(href="#") 8 Guests
                   
         button.btn.btn-primary.btn-large.pull-left(type="submit") Search for Dinner
-        
+div.rule
+div.footer
+  a.ss-icon.ss-social.social-link(href="#") facebook
+  a.ss-icon.ss-social.social-link(href="#") twitter
 block scripts
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="scripts/vendor/jquery/jquery-1.7.1.min.js"><\/script>')</script>
