--- a/webapp/views/search.jade
+++ b/webapp/views/search.jade
@@ -19,7 +19,7 @@ div.page-contain.container
 
                 div#guest-number-picker.btn-group.pull-left
                     button.btn.dropdown-toggle(data-toggle="dropdown") 2 guests
-                        i.icon-user
+                        i.icon-user.pull-right
                     ul.dropdown-menu
                         li
                             a(href="#") 1 Guest
