--- a/webapp/views/layout.jade
+++ b/webapp/views/layout.jade
@@ -14,3 +14,23 @@ html.no-js
       <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
     
   body!= body
+
+  div.container.footer-contain
+    div.footer
+      a.ss-icon.ss-social-circle.social-link(href="#") facebook
+      a.ss-icon.ss-social-circle.social-link(href="#") twitter
+
+  block scripts
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="scripts/vendor/jquery/jquery-1.7.1.min.js"><\/script>')</script>
+    
+    <script src="scripts/vendor/ss-social.js"></script>
+    <script src="scripts/vendor/ss-standard.js"></script>
+        
+    <script src="bootstrap/js/bootstrap-transition.js"></script>  
+    <script src="bootstrap/js/bootstrap-modal.js"></script>
+    <script src="bootstrap/js/bootstrap-dropdown.js"></script>
+    <script src="bootstrap/js/bootstrap-button.js"></script>
+    <script src="bootstrap/js/bootstrap-tooltip.js"></script>
+    <script src="bootstrap/js/bootstrap-popover.js"></script>
+    <script src="bootstrap/js/bootstrap-typeahead.js"></script>
