--- a/webapp/views/layout.jade
+++ b/webapp/views/layout.jade
@@ -16,6 +16,8 @@ html.no-js
       <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
       <script>window.jQuery || document.write('<script src="scripts/vendor/jquery/jquery-1.7.1.min.js"><\/script>')</script>
       
+      <script src="scripts/vendor/moment.js"></script>
+      
       <script src="scripts/vendor/ss-social.js"></script>
       <script src="scripts/vendor/ss-standard.js"></script>
           
