--- a/webapp/views/index.jade
+++ b/webapp/views/index.jade
@@ -1,5 +1,6 @@
 //h1= title
 //p Deving #{title}
+
 div.bg-img
 header.site-header 
   div.container
@@ -28,6 +29,7 @@ div.page-contain.container
             input(type="input", placeholder="When do you want to eat?")#location.span4
             span.add-on
               span.ss-icon.ss-standard date
+                      
         div#guest-number-picker.btn-group.pull-left
             button.btn.dropdown-toggle.btn-large(data-toggle="dropdown") 1 Guest
                 span.ss-icon.ss-standard.pull-right users
@@ -50,5 +52,71 @@ div.page-contain.container
                   a(href="#") 8 Guests
                   
         button.btn.btn-primary.btn-large.pull-left(type="submit") Search for Dinner
-    
-    
+
+  div#calendar-picker
+    a.btn(href='#', rel='popover', data-placement='bottom', data-original-title='popover title') popover button
+    table.table-bordered.table-striped.table-collapsed
+        thead
+          tr
+            th.buttons(colspan="7")
+              div.btn-group
+                a.btn 
+                  i.icon-chevron-left
+                a.btn.center-btn November 2012
+                a.btn
+                  i.icon-chevron-right
+          
+          tr
+            th Sun
+            th Mon
+            th Tue
+            th Wed
+            th Thu
+            th Fri
+            th Sat
+      
+        tbody
+          tr
+            td.muted 29
+            td.muted 30
+            td.muted 31
+            td 1
+            td 2
+            td 3
+            td 4
+          
+          tr
+            td 5
+            td 6
+            td 7
+            td 8
+            td 9
+            td 10
+            td 11
+          
+          tr
+            td 12
+            td 13
+            td 14
+            td 15
+            td 16
+            td 17
+            td 18
+          
+          tr
+            td 19
+            td 20
+            td 21
+            td 22
+            td 23
+            td 24
+            td 25
+          tr
+            td 26
+            td 27
+            td 28
+            td 29
+            td.muted 1
+            td.muted 2  
+            td.muted 3
+
