--- a/webapp/views/layout.jade
+++ b/webapp/views/layout.jade
@@ -14,20 +14,22 @@ html.no-js
       <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
       
       <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-      <script>window.jQuery || document.write('<script src="scripts/vendor/jquery/jquery-1.7.1.min.js"><\/script>')</script>
+      <script>window.jQuery || document.write('<script src="/scripts/vendor/jquery/jquery-1.7.1.min.js"><\/script>')</script>
       
-      <script src="scripts/vendor/moment.js"></script>
+      <script src="/scripts/vendor/moment.js"></script>
       
-      <script src="scripts/vendor/ss-social.js"></script>
-      <script src="scripts/vendor/ss-standard.js"></script>
+      <script src="/scripts/vendor/ss-social.js"></script>
+      <script src="/scripts/vendor/ss-standard.js"></script>
           
-      <script src="bootstrap/js/bootstrap-transition.js"></script>  
-      <script src="bootstrap/js/bootstrap-modal.js"></script>
-      <script src="bootstrap/js/bootstrap-dropdown.js"></script>
-      <script src="bootstrap/js/bootstrap-button.js"></script>
-      <script src="bootstrap/js/bootstrap-tooltip.js"></script>
-      <script src="bootstrap/js/bootstrap-popover.js"></script>
-      <script src="bootstrap/js/bootstrap-typeahead.js"></script>
+      <script src="/bootstrap/js/bootstrap-transition.js"></script>  
+      <script src="/bootstrap/js/bootstrap-modal.js"></script>
+      <script src="/bootstrap/js/bootstrap-dropdown.js"></script>
+      <script src="/bootstrap/js/bootstrap-button.js"></script>
+      <script src="/bootstrap/js/bootstrap-tooltip.js"></script>
+      <script src="/bootstrap/js/bootstrap-popover.js"></script>
+      <script src="/bootstrap/js/bootstrap-typeahead.js"></script>
+      
+      <script src="/scripts/onload.js"></script>
     
   body!= body
 
