--- a/webapp/views/search.jade
+++ b/webapp/views/search.jade
@@ -14,7 +14,7 @@ div.page-contain.container
         div.navbar-inner
             form.navbar-form.pull-left
                 div#city-picker.input-append.pull-left
-                    input#appendedInput.span4(type="text", placeholder="What city do you want to eat in?")
+                    input#location.typeahead.span4(type="text", placeholder="What city do you want to eat in?")
                     span.add-on
                         i.icon-map-marker
 
